movie model get and update working, optional filtering by genre. implemented logger
