# proyecto-final/backend/InstaFilms/api/controllers/movie.controller.js
@@ -1,14 +1,62 @@
-const movieService = require('../service/movie.service');
+const movieService = require("../service/movie.service");
+const logger = require("../../config/customlogger");
+
+const name = ["MOVIE.CONTROLLER"];
 
 const getMovieById = async (req, res) => {
-      
+  const id = req.swagger.params.id.value;
+
+  logger.info("im here whyyy");
+  const data = await movieService.getMovieById(id);
+  res.status(200).send(data);
+  console.log();
+};
+
+//manually add a movie
+const addMovie = async (req, res) => {
+  try {
     const params = {
-        id: req.swagger.params.id.value
-    }
-    const data = await movieService.getMovieById(params.id);
-    res.status(200).send(data)
-}
+      ...req.body
+    };
+    const data = await movieService.addMovie(params);
+    res.status(200).send(data);
+  } catch (error) {
+    logger.error(error);
+    res.status(500).send("error in movie controller", name);
+  }
+};
+//UPDATE ANY MOVIE fields
+const updateMovieById = async (req, res) => {
+  try {
+    const params = {
+      ...req.body
+    };
+    params.id = req.swagger.params.id.value;
+    const data = await movieService.updateMovie(params);
+    res.status(200).send(data);
+  } catch (error) {
+    logger.error(error);
+    res.status(500).send("error in", name, ", in ", updateMovieById.name);
+  }
+};
+
+const getMovieLanding = async (req, res) => {
+  try {
+    //optional sending genre
+    const genre = req.swagger.params.genre.value; 
+    
+      
+    const data = await movieService.getMovieLanding(genre);
+    res.send(data);
+  } catch (error) {
+      logger.error(error);
+      res.status(500).send("error in", name, ", in ", getMovieLanding.name);
+  }
+};
 
 module.exports = {
-    getMovieById
-}
+  getMovieById,
+  addMovie,
+  updateMovieById,
+  getMovieLanding
+};
